apps/base/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts: [dashboard.int.harville.dev]
      secretName: harville-wildcard-tls
  rules:
    - host: dashboard.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
